write about Eclipse download for javatry beginners

--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -104,6 +104,20 @@
 	<p>
 		ここでは、自身のエクササイズ結果をgitで管理するために、Github上でのフォークを使った手順を書いています。
 	</p>
+	<h3 id="forkjavatry">(0. IDE, Eclipse/IntelliJの用意)</h3>
+	<p>
+		もし、Eclipseを使うのであれば、以下のエディションとプラグインがオススメです。
+	</p>
+	<dl class="longkeymainlist">
+		<dt>Eclipse Download Page</dt><dd><a href="https://www.eclipse.org/downloads/packages/">https://www.eclipse.org/downloads/packages/</a></dd>
+	</dl>
+	<ul>
+		<li>Eclipse IDE for Java Developers をダウンロード <span class="frm">(Enterpriseじゃなくて十分)</span></li>
+		<li>Helpメニューの Eclipse Marketplace... で Quick JUnitプラグインをインストール</li>
+	</ul>
+	<p>
+		もし、IntelliJを使うのであれば...特にオススメのエディションやプラグインはありません。
+	</p>
 	<h3 id="forkjavatry">1. 本家javatryリポジトリをフォーク</h3>
 	<p>
 		本家javatryリポジトリを、自身のGithubアカウントにフォークします。
