adjust javatry for beginners

--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -106,24 +106,24 @@
 	</p>
 	<h3 id="forkjavatry">(0. IDE, Eclipse/IntelliJの用意)</h3>
 	<p>
-		もし、Eclipseを使うのであれば、以下のエディションとプラグインがオススメです。
+		Eclipseの場合、以下のエディションとプラグインがオススメです。
 	</p>
-	<dl class="longkeymainlist">
-		<dt>Eclipse Download Page</dt><dd><a href="https://www.eclipse.org/downloads/packages/">https://www.eclipse.org/downloads/packages/</a></dd>
-	</dl>
 	<ul>
 		<li>Eclipse IDE for Java Developers をダウンロード <span class="frm">(Enterpriseじゃなくて十分)</span></li>
 		<li>Helpメニューの Eclipse Marketplace... で Quick JUnitプラグインをインストール</li>
 	</ul>
+	<dl class="valuemainlist">
+		<dt>Download Page</dt><dd><a href="https://www.eclipse.org/downloads/packages/">https://www.eclipse.org/downloads/packages/</a></dd>
+	</dl>
 	<p>
-		もし、IntelliJを使うのであれば...特にオススメのエディションやプラグインはありません。
+		IntelliJの場合、特にオススメのエディションやプラグインはありません。
 	</p>
 	<h3 id="forkjavatry">1. 本家javatryリポジトリをフォーク</h3>
 	<p>
 		本家javatryリポジトリを、自身のGithubアカウントにフォークします。
 	</p>
 	<dl class="valuemainlist">
-		<dt>Repository</dt><dd><a href="https://github.com/dbflute-session/javatry">https://github.com/dbflute-session/javatry</a></dd>
+		<dt>Github Repository</dt><dd><a href="https://github.com/dbflute-session/javatry">https://github.com/dbflute-session/javatry</a></dd>
 	</dl>
 	<p>
 		<span class="frm">※もし、社内限定のgitリポジトリなどにjavatryが用意されている場合は、そちらを利用しましょう。</span>
