--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -29,6 +29,18 @@
 	${indexlist}
 
       <div class="release">
+        <h2>LastaFlute-1.2.0</h2>
+        <p class="releas5date">2020/12/14</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>add filterRequestParameterValue() to InOutLogOption</li>
+            <li>refactor selectableDataSource for multiple DB</li>
+          </ul>
+        </div>
+        <p>※1.1.9はスキップバージョン</p>
+      </div>
+      <div class="release">
         <h2>LastaFlute-1.1.8</h2>
         <p class="releas5date">2020/10/08</p>
         <div class="new">
@@ -41,7 +53,6 @@
             <li>[MailFlute] explicitly close transport after sending</li>
           </ul>
         </div>
-        <p>※1.1.5はスキップバージョン</p>
       </div>
       <div class="release">
         <h2>LastaFlute-1.1.7</h2>
