--- a/web/ja/manual/function/generator/intro/index.html
+++ b/web/ja/manual/function/generator/intro/index.html
@@ -59,6 +59,7 @@
 		以下のようにリリースされています。
 	</p>
 	<dl class="shortkeymainlist">
+		<dt>2020/02/21</dt><dd><em class="mark">0.3.10</em> :: AlterCheck時に、最新のzipファイルを利用しない不具合を修正</dd>
 		<dt>2020/01/12</dt><dd><em class="mark">0.3.9</em> :: AlterCheckのStep1で、チケット番号入力を必須に</dd>
 		<dt>2020/01/01</dt><dd><em class="mark">0.3.8</em> :: SchemaPolicyCheckのStatement登録/削除を追加</dd>
 		<dt>2019/10/24</dt><dd><em class="mark">0.3.7</em> :: targetLanguage と targetContainer のデフォルト値対応等、細かい改善</dd>
