--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -28,6 +28,23 @@
 	${indexlist}
 
       <div class="release">
+        <h2>DBFlute-1.2.4 <span class="frm">※Java8</span></h2>
+        <p class="releas5date">2021/01/01</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>DBFlute Runtime: fix SpecifyColumn alias conflict problem</li>
+            <li>DBFlute Runtime: fix map-style for map:{} only pattern</li>
+            <li>DBFlute Engine: can use sai as public engine of JavaScript</li>
+            <li>DBFlute Engine: can use Gson or sai for JSON of FreeGen</li>
+            <li>DBFlute Engine: Fix outside-sql files detecting order <span class="frm">*前回パッチ</span></li>
+          </ul>
+          <h3>BUG</h3>
+          <ul>
+          </ul>
+        </div>
+      </div>
+      <div class="release">
         <h2>DBFlute-1.2.3 <span class="frm">※Java8</span></h2>
         <p class="releas5date">2020/05/29</p>
         <div class="new">
