--- a/web/ja/lastaflute/howto/upgrade/index.html
+++ b/web/ja/lastaflute/howto/upgrade/index.html
@@ -62,11 +62,12 @@
 		<dt><a href="../architecture/jobscheduling.html">LastaJob</a></dt><dd>0.5.4 <span class="frm">(2019/12/25)</span></dd>
 		<dt><a href="../action/lathymeleaf.html">LastaThymeleaf</a></dt><dd>0.4.2 <span class="frm">(2020/05/21)</span></dd>
 		<dt><a href="../architecture/remoteapicall.html">LastaRemoteApi</a></dt><dd>0.4.6 <span class="frm">(2020/12/16)</span></dd>
+		<dt><a href="https://github.com/lastaflute/lasta-meta/">Lasta Meta</a></dt><dd>0.5.0 <span class="frm">(2021/01/27)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-doc/">lasta-doc engine</a></dt><dd>0.3.7 <span class="frm">(2019/10/21)</span></dd>
 		<dt><a href="https://github.com/lastaflute/lasta-taglib/">LastaTaglib</a></dt><dd>0.7.3 <span class="frm">(2018/07/26)</span></dd>
 		<dt><a href="https://github.com/dbflute-session/jetty-boot/">JettyBoot</a></dt><dd>0.4.9 <span class="frm">(2017/10/22)</span></dd>
 		<dt><a href="https://github.com/dbflute-session/tomcat-boot/">TomcatBoot</a></dt><dd>0.7.6 <span class="frm">(2020/11/27)</span></dd>
-		<dt><a href="../../../manual/function/helper/utflute/index.html">UTFlute</a></dt><dd>0.9.1 <span class="frm">(2019/05/14)</span></dd>
+		<dt><a href="../../../manual/function/helper/utflute/index.html">UTFlute</a></dt><dd>0.9.2 <span class="frm">(2021/01/27)</span></dd>
 	</dl>
 
 	<h2 id="changelog">ChangeLog</h2>
