make hands-on coding policy

--- a/web/ja/tutorial/handson/section03.html
+++ b/web/ja/tutorial/handson/section03.html
@@ -45,9 +45,14 @@
 
 	<h2 id="stretch">ConditionBeanのストレッチ</h2>
 	<p>
-		ConditionBeanの使い方、機能のページを参考にしながら実装しましょう。
+		ConditionBeanの使い方、機能のページを参考に。
 	</p>
 	<div class="detailpage"><a href="../../manual/function/ormapper/conditionbean/index.html">ConditionBean</a></div>
+	<h3 id="codingpolicy">コーディングポリシー</h3>
+	<p>
+		ハンズオンのコーディングポリシーを用意していますので、意識しながら実装しましょう。<span class="frm">(特にjfluteのレビューを受ける予定の方は、こちらをよろしくおねがいします)</span>
+	</p>
+	<div class="detailpage"><a href="./review/codingpolicy.html">ハンズオンのコーディングポリシー</a></div>
 	<h3 id="testtest">テストの前提もアサートしよう</h3>
 	<p>
 		テストが成り立っていることをアサートすることも大事です。
@@ -57,10 +62,6 @@
 	<p>
 		ところどころに登場するコラムの記事 (jflute's Column) も、ぜひ読んでいきましょう。
 		これもハンズオンの一環です。
-	</p>
-	<h3 id="goodluck">それでは</h3>
-	<p>
-		Good Luck!
 	</p>
 
 	<h2 id="cbsilver">Silverストレッチ</h2>
@@ -111,19 +112,6 @@
 			</span>
 		</dd>
 	</dl>
-	<div class="inucolumn">
-		<h3 id="forreview">レビューワーを意識してみよう</h3>
-		<p>
-			DBFluteハンズオンのレビューワーがいる人いない人いろいろだと思いますが...
-			いずれにせよ、ハンズオンでコードを書く時は "レビューワー" を意識してみましょう。
-			ぜひ、こちらのブログをお読みください。
-		</p>
-		<div class="detailpage"><a href="http://d.hatena.ne.jp/jflute/20160912/reviewable">レビューしやすいコード (Reviewable Code) | jfluteの日記</a></div>
-		<p>
-			<em class="keyword">レビューしやすいコードってどんなコード？</em>
-			を考え続けることが大切です。
-		</p>
-	</div>
 	<div class="inucolumn">
 		<h3 id="norereview">他にも似たところないか探す習慣を</h3>
 		<p>
