--- a/web/ja/tutorial/javatry/index.html
+++ b/web/ja/tutorial/javatry/index.html
@@ -369,6 +369,12 @@ log(sea); <span class="comment">// your answer? =&gt; <span class="point">mystic
 		対象メソッドの宣言部分から、何かしらクリックして簡単に実行できるはずです。オフィシャルドキュメントを参考にしましょう。
 	</p>
 	<div class="relatedpage"><a href="https://pleiades.io/help/idea/performing-tests.html">テストの実行﻿ | IntelliJ IDEA</a></div>
+
+	<h2 id="codingpolicy">コーディングポリシー</h2>
+	<p>
+		コーディングポリシーを用意していますので、意識しながら実装しましょう。
+	</p>
+	<div class="detailpage"><a href="../handson/review/codingpolicy.html">ハンズオンのコーディングポリシー</a></div>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
