make English page of hands-on coding policy

--- a/web/ja/tutorial/handson/review/codingpolicy.html
+++ b/web/ja/tutorial/handson/review/codingpolicy.html
@@ -26,6 +26,7 @@
 <div id="content"><!-- __content-start__ -->
 	<h1>ハンズオンのコーディングポリシー</h1>
 	${indexlist}
+	<div class="relatedpage"><a href="../../../../tutorial/handson/review/codingpolicy.html">to English page</a></div>
 
 	<h2 id="overview">概要</h2>
 	<p>
