--- a/web/ja/manual/function/ormapper/conditionbean/hitomecb.html
+++ b/web/ja/manual/function/ormapper/conditionbean/hitomecb.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>ひとめでConditionBean</h1>
-	<div class="relatedpage"><a href="../../../../../manual/function/ormapper/conditionbean/hitomecb.html">to English Page</a></div>
+	<div class="relatedpage"><a href="../../../../../manual/function/ormapper/conditionbean/hitomecb.html">to English page</a></div>
 	${indexlist}
 
 	<h2 id="function">ConditionBeanの機能</h2>
