--- a/web/manual/function/ormapper/conditionbean/hitomecb.html
+++ b/web/manual/function/ormapper/conditionbean/hitomecb.html
@@ -25,7 +25,7 @@
 
 <div id="content"><!-- __content-start__ -->
 	<h1>ConditionBean at a Glance</h1>
-	<div class="relatedpage"><a href="../../../../ja/manual/function/ormapper/conditionbean/hitomecb.html">to Japanese Page</a></div>
+	<div class="relatedpage"><a href="../../../../ja/manual/function/ormapper/conditionbean/hitomecb.html">to Japanese page</a></div>
 	${indexlist}
 
 	<h2 id="function">ConditionBean Functions</h2>
