--- a/web/ja/lastaflute/howto/architecture/friendlylogging.html
+++ b/web/ja/lastaflute/howto/architecture/friendlylogging.html
@@ -473,7 +473,7 @@ java.lang.IllegalStateException: test error
   Response class=org.mortbay.jetty.Response, ContentType=text/html; charset=utf-8, Committed=true
   , toString()=HTTP/1.1 200  Content-Type: text/html; charset=utf-8 Expires: Thu, 01 Dec 1994 16:00:00 GMT Pragma: no-cache Cache-Contr...
   <span class="abbreviation">...</span>
-  [request] <span class="point">saflute.dbflute.sql.count={total=1, selectCB=1, entityUpdate=0, queryUpdate=0, outsideSql=0, procedure=0}</span>
+  [request] <span class="point">lastaflute.dbflute.SQL_COUNT={total=1, selectCB=1, entityUpdate=0, queryUpdate=0, outsideSql=0, procedure=0}</span>
   <span class="abbreviation">...</span>
   [session] javax.servlet.jsp.jstl.fmt.request.charset=UTF-8
   [session] member_memberListForm=org.dbflute.maihama.app.web.member.Memb<span class="abbreviation">...</span>
