add 5/3 patch, e.g. xlsx, tsv

--- a/web/ja/environment/changelog/index.html
+++ b/web/ja/environment/changelog/index.html
@@ -33,6 +33,9 @@
         <div class="new">
           <h3>NEW</h3>
           <ul>
+            <li>DBFlute Engine: call ZipSecureFile@setMinInflateRatio() for large xlsx <span class="frm">*05/03パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, resolve cost of TSV too-many lines in value <span class="frm">*05/03パッチ</span></li>
+            <li>DBFlute Engine: ReplaceSchema, support TSV failure retry <span class="frm">*05/03パッチ</span></li>
             <li>DBFlute Engine: can use sai as public engine of JavaScript</li>
             <li>DBFlute Engine: can use Gson or sai for JSON of FreeGen</li>
             <li>DBFlute Engine: Fix outside-sql files detecting order <span class="frm">*前回パッチ</span></li>
