--- a/web/ja/lastaflute/howto/action/larestfulapi.html
+++ b/web/ja/lastaflute/howto/action/larestfulapi.html
@@ -4,7 +4,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="Content-Style-Type" content="text/css" />
-	<meta name="keywords" content="DBFlute,LastaFlute,Java,Lean Startup,Incremental Development,Transaction,トランザクション" />
+	<meta name="keywords" content="DBFlute,LastaFlute,Java,Lean Startup,Incremental Development" />
 	<style type="text/css" title="currentStyle">@import "../../../../css/sub.css";</style>
 	<title>規約縛りのRESTful API | LastaFlute</title>
 </head>
